--- a/assets/less/600.less
+++ b/assets/less/600.less
@@ -16,8 +16,12 @@ html {
 	.prefix(12,0);
 	.suffix(12,0);
 }
+.image-wrap .headline-wrap,
 .image-wrap:after {
 	left: 25%;
+}
+.image-wrap .headline-wrap {
+	margin-left: 0;
 }
 #main article {
 	.grid(12,6);
